--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,7 +1,7 @@
 [versions]
-androidApplication = "8.2.1"
-androidLibrary = "8.2.1"
-kotlinAndroid = "1.9.0"
+androidApplication = "8.12.3"
+androidLibrary = "8.12.3"
+kotlinAndroid = "2.2.20"
 coreKtx = "1.12.0"
 lifecycle = "2.6.2"
 activityCompose = "1.8.2"
@@ -12,6 +12,7 @@ navigationCompose = "2.7.7"
 junit = "4.13.2"
 androidxTestExtJunit = "1.1.5"
 espressoCore = "3.5.1"
+androidTools = "31.12.2"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -33,8 +34,19 @@ androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-co
 androidx-compose-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-compose-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
+compose-gradlePlugin = { module = "org.jetbrains.kotlin:compose-compiler-gradle-plugin", version.ref = "kotlinAndroid" }
+
+# build
+android-gradleApiPlugin = { group = "com.android.tools.build", name = "gradle-api", version.ref = "androidLibrary" }
+android-tools-common = { group = "com.android.tools", name = "common", version.ref = "androidTools" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidApplication" }
 android-library = { id = "com.android.library", version.ref = "androidLibrary" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlinAndroid" }
+compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlinAndroid" }
+
+moex-android-application-compose = { id = "moex.android.application.compose" }
+moex-android-library-compose = { id = "moex.android.library.compose" }
+moex-android-application = { id = "moex.android.application" }
+moex-android-library = { id = "moex.android.library" }
