--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -10,6 +10,7 @@ composeBom = "2023.08.00"
 retrofit = "2.9.0"
 coroutines = "1.7.3"
 navigationCompose = "2.7.7"
+jroom = "2.6.1"
 junit = "4.13.2"
 androidxTestExtJunit = "1.1.5"
 espressoCore = "3.5.1"
@@ -32,6 +33,9 @@ retrofit-converter-gson = { group = "com.squareup.retrofit2", name = "converter-
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "coroutines" }
 androidx-lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
+jroom-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "jroom" }
+jroom-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "jroom" }
+jroom-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "jroom" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-test-ext-junit = { group = "androidx.test.ext", name = "junit", version.ref = "androidxTestExtJunit" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
